fix todo redirect to avoid going to a new page causing breakage. Also fix css on body container to calc the nav-bar bottom height of 95px to avoid bottom bar overlapping content and also changed height to min-height so background covers entire view

--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 .body-container {
   width: 100vw;
   padding: 2rem 1rem;
-  height: 100vh;
+  min-height: calc(100vh-95px);
   background-color: #fff;
   margin-top: 9rem;
   margin-bottom: 9rem;
